Updating branch to current